Just updating GIT with latest changes

--- a/Dev/Dev2.Activities.Designers.Tests/Dev2.Activities.Designers.Tests.csproj
+++ b/Dev/Dev2.Activities.Designers.Tests/Dev2.Activities.Designers.Tests.csproj
@@ -110,6 +110,7 @@
     <None Include="..\Dev2.Core.Tests\TestUtils.cs">
       <Link>TestUtils.cs</Link>
     </None>
+    <Compile Include="AdvancedRecordsetTests\AdvancedRecordsetViewModelTests.cs" />
     <Compile Include="AggregateCalculate\AggregateCalculateDesignerViewModelTests.cs" />
     <Compile Include="Calculate\CalculateDesignerViewModelTest.cs" />
     <Compile Include="CaseConvert\CaseConvertDesignerViewModelTests.cs" />
