--- a/Dev/Dev2.Runtime.Services/Dev2.Runtime.Services.csproj
+++ b/Dev/Dev2.Runtime.Services/Dev2.Runtime.Services.csproj
@@ -210,6 +210,7 @@
     <Compile Include="ESB\Management\DefaultEsbManagementEndpoint.cs" />
     <Compile Include="ESB\Management\EsbManagementServiceEntry.cs" />
     <Compile Include="ESB\Management\Services\TaskExtentions.cs" />
+    <Compile Include="ESB\Management\Services\TestSqliteService.cs" />
     <Compile Include="IDbSources.cs" />
     <Compile Include="Interfaces\IConnections.cs" />
     <Compile Include="Interfaces\IHubFactory.cs" />
