--- a/Dev/Dev2.Services.Execution/Dev2.Services.Execution.csproj
+++ b/Dev/Dev2.Services.Execution/Dev2.Services.Execution.csproj
@@ -85,7 +85,7 @@
       <Visible>False</Visible>
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
-    <AdditionalFiles Include="..\SonarLint.xml" />
+    <AdditionalFiles Include="..\SonarQube\SonarLint.xml" />
     <Compile Include="IServiceExecution.cs" />
     <Compile Include="DatabaseServiceExecution.cs" />
     <Compile Include="ServiceExecutionAbstract.cs" />
