--- a/Dev/Warewolf.Studio.ServerProxyLayer/Warewolf.Studio.ServerProxyLayer.csproj
+++ b/Dev/Warewolf.Studio.ServerProxyLayer/Warewolf.Studio.ServerProxyLayer.csproj
@@ -76,7 +76,7 @@
       <Visible>False</Visible>
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
-    <AdditionalFiles Include="..\SonarLint.xml" />
+    <AdditionalFiles Include="..\SonarQube\SonarLint.xml" />
     <Compile Include="ProxyBase.cs" />
     <Compile Include="QueryManagerProxy.cs">
       <SubType>Code</SubType>
