--- a/Dev/Warewolf.UIBindingTests.Core/Warewolf.UIBindingTests.Core.csproj
+++ b/Dev/Warewolf.UIBindingTests.Core/Warewolf.UIBindingTests.Core.csproj
@@ -128,7 +128,7 @@
       <Link>Run Tests.ps1</Link>
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
-    <AdditionalFiles Include="..\SonarLint.xml" />
+    <AdditionalFiles Include="..\SonarQube\SonarLint.xml" />
     <Compile Include="Utils.cs" />
   </ItemGroup>
   <ItemGroup>
