--- a/Dev/Warewolf.UIBindingTests.Decision/Warewolf.UIBindingTests.Decision.csproj
+++ b/Dev/Warewolf.UIBindingTests.Decision/Warewolf.UIBindingTests.Decision.csproj
@@ -104,7 +104,7 @@
       <Link>Run Tests.ps1</Link>
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
-    <AdditionalFiles Include="..\SonarLint.xml" />
+    <AdditionalFiles Include="..\SonarQube\SonarLint.xml" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
