--- a/Dev/Warewolf.Studio.CustomControls/Warewolf.Studio.CustomControls.csproj
+++ b/Dev/Warewolf.Studio.CustomControls/Warewolf.Studio.CustomControls.csproj
@@ -124,6 +124,7 @@
     <Compile Include="DoubleClickBehavior.cs" />
     <Compile Include="DragDropExtension.cs" />
     <Compile Include="SearchTextBox.cs" />
+    <Compile Include="TabControlEx.cs" />
     <Compile Include="VariableTextBox.cs" />
     <Compile Include="..\AssemblyCommonInfo.cs" Condition="Exists('..\AssemblyCommonInfo.cs')">
       <Link>Properties\AssemblyCommonInfo.cs</Link>
