--- a/Dev/Dev2.Studio.Core.Tests/Dev2.Studio.Core.Tests.csproj
+++ b/Dev/Dev2.Studio.Core.Tests/Dev2.Studio.Core.Tests.csproj
@@ -303,6 +303,7 @@
     <Compile Include="MergeWorkflowViewModelTests.cs" />
     <Compile Include="MergeViewModelTest.cs" />
     <Compile Include="QueryManagerProxyTest.cs" />
+    <Compile Include="ExplorerDeleteProviderTests.cs" />
     <Compile Include="UpdateProxyTest.cs" />
     <Compile Include="UtilsTests\ActivityDesignerLanuageNotationConverterTest.cs" />
     <Compile Include="UtilsTests\DataListConversionUtilTest.cs" />
