--- a/Dev/Warewolf.Parsing.Tests/Warewolf.Parsing.Tests.csproj
+++ b/Dev/Warewolf.Parsing.Tests/Warewolf.Parsing.Tests.csproj
@@ -43,6 +43,9 @@
     <TreatWarningsAsErrors>false</TreatWarningsAsErrors>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="..\AssemblyCommonInfo.Tests.cs" Condition="Exists('..\AssemblyCommonInfo.Tests.cs')">
+      <Link>Properties\AssemblyCommonInfo.Tests.cs</Link>
+    </Compile>
     <Reference Include="Castle.Core, Version=4.0.0.0, Culture=neutral, PublicKeyToken=407dd0808d44fbdc, processorArchitecture=MSIL">
       <HintPath>..\packages\Castle.Core.4.2.0\lib\net45\Castle.Core.dll</HintPath>
     </Reference>
@@ -81,9 +84,6 @@
     <Compile Include="TestDistinct.cs" />
     <Compile Include="TestEvaluation.cs" />
     <Compile Include="TestParser.cs" />
-    <Compile Include="..\AssemblyCommonInfo.cs" Condition="Exists('..\AssemblyCommonInfo.cs')">
-      <Link>Properties\AssemblyCommonInfo.cs</Link>
-    </Compile>
     <None Include="..\Run Tests.ps1">
       <Visible>False</Visible>
       <Link>Run Tests.ps1</Link>
