--- a/Dev/Warewolf.Storage.Tests/Warewolf.Storage.Tests.csproj
+++ b/Dev/Warewolf.Storage.Tests/Warewolf.Storage.Tests.csproj
@@ -32,6 +32,9 @@
     <TreatWarningsAsErrors>false</TreatWarningsAsErrors>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="..\AssemblyCommonInfo.Tests.cs" Condition="Exists('..\AssemblyCommonInfo.Tests.cs')">
+      <Link>Properties\AssemblyCommonInfo.Tests.cs</Link>
+    </Compile>
     <Reference Include="Caliburn.Micro, Version=1.4.1.0, Culture=neutral, PublicKeyToken=8e5891231f2ed21f, processorArchitecture=MSIL">
       <HintPath>..\packages\Caliburn.Micro.1.4.1\lib\net45\Caliburn.Micro.dll</HintPath>
       <Private>True</Private>
@@ -77,9 +80,6 @@
     </CodeAnalysisDependentAssemblyPaths>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="..\AssemblyCommonInfo.cs" Condition="Exists('..\AssemblyCommonInfo.cs')">
-      <Link>Properties\AssemblyCommonInfo.cs</Link>
-    </Compile>
     <None Include="..\Run Tests.ps1">
       <Visible>False</Visible>
       <Link>Run Tests.ps1</Link>
