--- a/Dev/Dev2.Data.Tests/Dev2.Data.Tests.csproj
+++ b/Dev/Dev2.Data.Tests/Dev2.Data.Tests.csproj
@@ -43,9 +43,6 @@
     <TreatWarningsAsErrors>false</TreatWarningsAsErrors>
   </PropertyGroup>
   <ItemGroup>
-    <Compile Include="..\AssemblyCommonInfo.Tests.cs" Condition="Exists('..\AssemblyCommonInfo.Tests.cs')">
-      <Link>Properties\AssemblyCommonInfo.Tests.cs</Link>
-    </Compile>
     <Reference Include="Castle.Core, Version=4.0.0.0, Culture=neutral, PublicKeyToken=407dd0808d44fbdc, processorArchitecture=MSIL">
       <HintPath>..\packages\Castle.Core.4.2.0\lib\net45\Castle.Core.dll</HintPath>
     </Reference>
@@ -149,6 +146,7 @@
     <Compile Include="EnumTests\enTypeOfSystemInformationTests.cs" />
     <Compile Include="IndexListIndexIteratorTests.cs" />
     <Compile Include="MethodOutputTests.cs" />
+    <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="PulseTrackerTests.cs" />
     <Compile Include="ServiceModel\SharePointSourceTests.cs" />
     <Compile Include="ServiceModel\RabbitMQSourceTests.cs" />
