--- a/Dev/Warewolf.Parsing.Tests/Warewolf.Parsing.Tests.csproj
+++ b/Dev/Warewolf.Parsing.Tests/Warewolf.Parsing.Tests.csproj
@@ -43,9 +43,6 @@
     <TreatWarningsAsErrors>false</TreatWarningsAsErrors>
   </PropertyGroup>
   <ItemGroup>
-    <Compile Include="..\AssemblyCommonInfo.Tests.cs" Condition="Exists('..\AssemblyCommonInfo.Tests.cs')">
-      <Link>Properties\AssemblyCommonInfo.Tests.cs</Link>
-    </Compile>
     <Reference Include="Castle.Core, Version=4.0.0.0, Culture=neutral, PublicKeyToken=407dd0808d44fbdc, processorArchitecture=MSIL">
       <HintPath>..\packages\Castle.Core.4.2.0\lib\net45\Castle.Core.dll</HintPath>
     </Reference>
@@ -77,6 +74,7 @@
     <Compile Include="AssignTests.cs" />
     <Compile Include="EvalFunctionTests.cs" />
     <Compile Include="Person.cs" />
+    <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SortTest.cs" />
     <Compile Include="TestAst.cs" />
     <Compile Include="TestCommonFunctions.cs" />
