--- a/Dev/Warewolf.Storage.Tests/Warewolf.Storage.Tests.csproj
+++ b/Dev/Warewolf.Storage.Tests/Warewolf.Storage.Tests.csproj
@@ -32,9 +32,6 @@
     <TreatWarningsAsErrors>false</TreatWarningsAsErrors>
   </PropertyGroup>
   <ItemGroup>
-    <Compile Include="..\AssemblyCommonInfo.Tests.cs" Condition="Exists('..\AssemblyCommonInfo.Tests.cs')">
-      <Link>Properties\AssemblyCommonInfo.Tests.cs</Link>
-    </Compile>
     <Reference Include="Caliburn.Micro, Version=1.4.1.0, Culture=neutral, PublicKeyToken=8e5891231f2ed21f, processorArchitecture=MSIL">
       <HintPath>..\packages\Caliburn.Micro.1.4.1\lib\net45\Caliburn.Micro.dll</HintPath>
       <Private>True</Private>
@@ -88,6 +85,7 @@
     <AdditionalFiles Include="..\SonarQube\SonarLint.xml">
       <Visible>False</Visible>
     </AdditionalFiles>
+    <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="WarewolfListIteratorTests.cs" />
     <Compile Include="WarewolfAtomIteratorTests.cs" />
     <Compile Include="FsInteropFunctionsTests.cs" />
