WOLF-4022 parallelize these projects but only per class

--- a/Dev/Warewolf.COMIPC.Tests/Warewolf.COMIPC.Tests.csproj
+++ b/Dev/Warewolf.COMIPC.Tests/Warewolf.COMIPC.Tests.csproj
@@ -51,9 +51,7 @@
     <Reference Include="System.Configuration" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="..\AssemblyCommonInfo.cs" Condition="Exists('..\AssemblyCommonInfo.cs')">
-      <Link>Properties\AssemblyCommonInfo.cs</Link>
-    </Compile>
+    <Compile Include="Properties\AssemblyInfo.cs" />
     <None Include="..\Run Tests.ps1">
       <Visible>False</Visible>
       <Link>Run Tests.ps1</Link>
