--- a/Dev/Dev2.Studio.Core.Specs/Dev2.Studio.Core.Specs.csproj
+++ b/Dev/Dev2.Studio.Core.Specs/Dev2.Studio.Core.Specs.csproj
@@ -46,9 +46,6 @@
     <TreatWarningsAsErrors>false</TreatWarningsAsErrors>
   </PropertyGroup>
   <ItemGroup>
-    <Compile Include="..\AssemblyCommonInfo.cs" Condition="Exists('..\AssemblyCommonInfo.cs')">
-      <Link>Properties\AssemblyCommonInfo.cs</Link>
-    </Compile>
     <None Include="..\Run Tests.ps1">
       <Visible>False</Visible>
       <Link>Run Tests.ps1</Link>
@@ -103,6 +100,7 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Helper\FileQueryHelper.cs" />
     <Compile Include="IntellisenseSpecs\IntellisenseProvider.feature.cs">
       <AutoGen>True</AutoGen>
