--- a/Dev/Warewolf.Tools.Specs/Warewolf.Tools.Specs.csproj
+++ b/Dev/Warewolf.Tools.Specs/Warewolf.Tools.Specs.csproj
@@ -302,8 +302,7 @@
       <DependentUpon>WebGet.feature</DependentUpon>
     </Compile>
     <Compile Include="Toolbox\Resources\Web\WebGetSteps.cs" />
-    <Compile Include="Toolbox\Utility\DateandTime\DateandTime.feature.cs" />
-    <Compile Include="Toolbox\Utility\DateandTime\DateandTime1.feature.cs">
+    <Compile Include="Toolbox\Utility\DateandTime\DateandTime.feature.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>DateandTime.feature</DependentUpon>
@@ -671,7 +670,7 @@
     </None>
     <None Include="Toolbox\Utility\DateandTime\DateandTime.feature">
       <Generator>SpecFlowSingleFileGenerator</Generator>
-      <LastGenOutput>DateandTime1.feature.cs</LastGenOutput>
+      <LastGenOutput>DateandTime.feature.cs</LastGenOutput>
     </None>
     <None Include="Toolbox\Utility\RabbitMQ\Consume\ConsumeRabbitMQ.feature">
       <Generator>SpecFlowSingleFileGenerator</Generator>
