--- a/Dev/Dev2.Activities.Designers.Tests/Dev2.Activities.Designers.Tests.csproj
+++ b/Dev/Dev2.Activities.Designers.Tests/Dev2.Activities.Designers.Tests.csproj
@@ -104,9 +104,6 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="..\AssemblyCommonInfo.cs">
-      <Link>Properties\AssemblyCommonInfo.cs</Link>
-    </None>
     <None Include="..\Run Tests.ps1">
       <Visible>False</Visible>
       <Link>Run Tests.ps1</Link>
@@ -120,6 +117,7 @@
     </None>
     <Compile Include="AdvancedRecordsetTests\AdvancedRecordsetViewModelTests.cs" />
     <Compile Include="AggregateCalculate\AggregateCalculateDesignerViewModelTests.cs" />
+    <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Calculate\CalculateDesignerViewModelTest.cs" />
     <Compile Include="CaseConvert\CaseConvertDesignerViewModelTests.cs" />
     <Compile Include="CEventHelperTests.cs" />
