--- a/Dev/Dev2.Common.Tests/Dev2.Common.Tests.csproj
+++ b/Dev/Dev2.Common.Tests/Dev2.Common.Tests.csproj
@@ -67,9 +67,7 @@
     <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="..\AssemblyCommonInfo.cs" Condition="Exists('..\AssemblyCommonInfo.cs')">
-      <Link>Properties\AssemblyCommonInfo.cs</Link>
-    </Compile>
+    <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="CommonComparerTests.cs" />
     <Compile Include="DebugStateTreeBuilderTests.cs" />
     <Compile Include="GetComputerNamesTests.cs" />
