--- a/Dev/Dev2.CustomControls.Tests/Dev2.CustomControls.Tests.csproj
+++ b/Dev/Dev2.CustomControls.Tests/Dev2.CustomControls.Tests.csproj
@@ -81,9 +81,7 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="..\AssemblyCommonInfo.cs" Condition="Exists('..\AssemblyCommonInfo.cs')">
-      <Link>Properties\AssemblyCommonInfo.cs</Link>
-    </Compile>
+    <Compile Include="Properties\AssemblyInfo.cs" />
     <None Include="..\Run Tests.ps1">
       <Visible>False</Visible>
       <Link>Run Tests.ps1</Link>
