--- a/Dev/Dev2.TaskScheduler.Wrappers.Tests/Dev2.TaskScheduler.Wrappers.Tests.csproj
+++ b/Dev/Dev2.TaskScheduler.Wrappers.Tests/Dev2.TaskScheduler.Wrappers.Tests.csproj
@@ -61,9 +61,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="..\AssemblyCommonInfo.cs" Condition="Exists('..\AssemblyCommonInfo.cs')">
-      <Link>Properties\AssemblyCommonInfo.cs</Link>
-    </Compile>
+    <Compile Include="Properties\AssemblyInfo.cs" />
     <None Include="..\Run Tests.ps1">
       <Visible>False</Visible>
       <Link>Run Tests.ps1</Link>
