--- a/Dev/Warewolf.Core.Tests/Warewolf.Core.Tests.csproj
+++ b/Dev/Warewolf.Core.Tests/Warewolf.Core.Tests.csproj
@@ -55,6 +55,7 @@
     <Reference Include="System" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ServiceInputTests.cs" />
     <Compile Include="ServiceOutputMappingTests.cs" />
   </ItemGroup>
