--- a/Dev/Warewolf.MergeParser.Tests/Warewolf.MergeParser.Tests.csproj
+++ b/Dev/Warewolf.MergeParser.Tests/Warewolf.MergeParser.Tests.csproj
@@ -77,6 +77,7 @@
     </None>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ParserTestHelper.cs" />
     <Compile Include="ParseServiceForDifferencesTests.cs" />
     <Compile Include="XML Parser\XmlResource.cs" />
