--- a/Dev/Warewolf.Studio.ViewModels.Tests/Warewolf.Studio.ViewModels.Tests.csproj
+++ b/Dev/Warewolf.Studio.ViewModels.Tests/Warewolf.Studio.ViewModels.Tests.csproj
@@ -96,6 +96,7 @@
     <Reference Include="Newtonsoft.Json, Version=10.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <HintPath>..\packages\Newtonsoft.Json.10.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
+    <Compile Include="Properties\AssemblyInfo.cs" />
     <Reference Include="PresentationCore" />
     <Reference Include="PresentationFramework" />
     <Reference Include="ServiceStack.Text, Version=3.9.37.0, Culture=neutral, processorArchitecture=MSIL">
