--- a/Dev/Dev2.Studio.Interfaces/Dev2.Studio.Interfaces.csproj
+++ b/Dev/Dev2.Studio.Interfaces/Dev2.Studio.Interfaces.csproj
@@ -40,6 +40,7 @@
     <Compile Include="..\AssemblyCommonInfo.cs" Condition="Exists('..\AssemblyCommonInfo.cs')">
       <Link>Properties\AssemblyCommonInfo.cs</Link>
     </Compile>
+    <Compile Include="IApplicationAdaptor.cs" />
     <Compile Include="IStudioTestWorkSurfaceViewModel.cs" />
     <Compile Include="IUpdatesHelp.cs" />
     <Compile Include="IWorksurfaceKey.cs" />
