--- a/Dev/Dev2.Common/packages.config
+++ b/Dev/Dev2.Common/packages.config
@@ -4,8 +4,13 @@
   <package id="Caliburn.Micro.Core" version="3.0.1" targetFramework="net45" />
   <package id="codecracker.CSharp" version="1.0.1" targetFramework="net47" developmentDependency="true" />
   <package id="Dropbox.Api" version="4.2.4" targetFramework="net45" />
+  <package id="EntityFramework" version="6.2.0" targetFramework="net47" />
   <package id="Microsoft.Exchange.WebServices" version="2.2" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net45" />
   <package id="SonarAnalyzer.CSharp" version="6.6.0.3969" targetFramework="net47" developmentDependency="true" />
+  <package id="System.Data.SQLite" version="1.0.109.2" targetFramework="net47" />
+  <package id="System.Data.SQLite.Core" version="1.0.109.2" targetFramework="net47" />
+  <package id="System.Data.SQLite.EF6" version="1.0.109.0" targetFramework="net47" />
+  <package id="System.Data.SQLite.Linq" version="1.0.109.0" targetFramework="net47" />
   <package id="TxFileManager" version="1.3" targetFramework="net45" />
 </packages>
