--- a/Dev/Warewolf.Language.Parser/Warewolf.Language.Parser.fsproj
+++ b/Dev/Warewolf.Language.Parser/Warewolf.Language.Parser.fsproj
@@ -108,11 +108,6 @@
     <Compile Include="IntellisenseStringProvider.fs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Warewolf.Parser.Interop\Warewolf.Parser.Interop.csproj">
-      <Name>Warewolf.Parser.Interop</Name>
-      <Project>{6eb59eee-4e16-4f29-b1b0-715e56e9139d}</Project>
-      <Private>True</Private>
-    </ProjectReference>
     <Reference Include="FSharp.Core">
       <HintPath>..\packages\FSharp.Core.3.0.0.2\lib\net40\FSharp.Core.dll</HintPath>
       <Private>True</Private>
@@ -133,14 +128,11 @@
     <Reference Include="System.Core" />
     <Reference Include="System.Numerics" />
     <Reference Include="System.Runtime.Caching" />
-    <ProjectReference Include="..\Dev2.Common.Interfaces\Dev2.Common.Interfaces.csproj">
-      <Name>Dev2.Common.Interfaces</Name>
-      <Project>{13c0c6e9-7dc3-4dc3-8535-031c263cee0b}</Project>
-      <Private>True</Private>
-    </ProjectReference>
-    <ProjectReference Include="..\Dev2.Common\Dev2.Common.csproj">
-      <Name>Dev2.Common</Name>
-      <Project>{84405fdf-0ff8-49a2-8925-8a4aeba8104a}</Project>
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Warewolf.Parser.Interop\Warewolf.Parser.Interop.csproj">
+      <Name>Warewolf.Parser.Interop</Name>
+      <Project>{6eb59eee-4e16-4f29-b1b0-715e56e9139d}</Project>
       <Private>True</Private>
     </ProjectReference>
   </ItemGroup>
